// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAddUniqueConstraintSql should generate SQL query for adding a unique constraint to multiple column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\"
    ADD CONSTRAINT \\"constraintName\\"
    UNIQUE (column1,column2)"
`;

exports[`getAddUniqueConstraintSql should generate SQL query for adding a unique constraint to single column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\"
    ADD CONSTRAINT \\"constraintName\\"
    UNIQUE (column1)"
`;

exports[`getAlterColumnTypeSql should generate SQL query for renaming a column with nullable as false 1`] = `"ALTER TABLE \\"schemaName\\".\\"tableName\\" ALTER COLUMN \\"columnName\\" columnType NOT NULL"`;

exports[`getCreatePkSql should generate SQL query for adding a pk constraint to multiple column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\"
    ADD CONSTRAINT \\"constraintName\\"
    PRIMARY KEY (\\"column1\\",\\"column2\\")"
`;

exports[`getCreatePkSql should generate SQL query for adding a pk constraint to single column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\"
    ADD CONSTRAINT \\"constraintName\\"
    PRIMARY KEY (\\"column1\\")"
`;

exports[`getDropColumnDefaultSql should generate SQL query to drop the default value to a column 1`] = `"ALTER TABLE \\"schemaName\\".\\"tableName\\" DROP CONSTRAINT \\"constraintName\\""`;

exports[`getDropColumnSql should generate SQL query for droping a column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\"
    DROP COLUMN \\"columnName\\""
`;

exports[`getDropConstraintSql should generate SQL query to drop the constraint to a column 1`] = `"ALTER TABLE \\"schemaName\\".\\"tableName\\" DROP CONSTRAINT \\"constraintName\\""`;

exports[`getDropNotNullSql should generate SQL query to set a column to drop not null 1`] = `"ALTER TABLE \\"schemaName\\".\\"tableName\\" ALTER COLUMN \\"columnName\\"  columnType NULL"`;

exports[`getRenameColumnQuery should generate SQL query for renaming a column 1`] = `"sp_rename '[schemaName].[tableName].[oldColumnName]', 'newColumnName', 'COLUMN'"`;

exports[`getSetColumnDefaultSql should generate SQL query to set or alter the default value to a column 1`] = `
"ALTER TABLE \\"schemaName\\".\\"tableName\\" DROP CONSTRAINT IF EXISTS \\"constraintName\\";
    ALTER TABLE \\"schemaName\\".\\"tableName\\" ADD CONSTRAINT \\"constraintName\\" DEFAULT defaultValue FOR \\"columnName\\""
`;

exports[`getSetNotNullSql should generate SQL query to set a column to not null 1`] = `"ALTER TABLE \\"schemaName\\".\\"tableName\\" ALTER COLUMN \\"columnName\\"  columnType NOT NULL"`;
